# fuzzy-2425

./: .gitignore  A-FDEKM_README.md  README_REFACTORED.md  main.py  output.csv  requirements.txt  run.py
Collaborative_FCM/: CFCM.py
DBSCAN/results/: cluster_summary.txt  clustered_data.csv
DBSCAN/src/: dbscan_country.py
DEKM_NA/: DEKM1.ipynb  DEKM1.py  DEKM2.ipynb  DEKM2.py
FCM/: pyproject.toml
FCM/src/fcm/: example.py  help.py  ttest.py
FCM_NA/: e-comerce.ipynb  e-comerce.py
FDEKM/: fdekm.py
Kmean/: pyproject.toml
Kmean/outputs/: Country-data-clustered.csv
Kmean/src/kmean/: example.py
PFCM/: PFCM.ipynb
PFCM_NA/: e-comerce.ipynb  usps.ipynb  usps.py
fuzzy_clustering/: __init__.py  main.py
fuzzy_clustering/algorithms/: __init__.py  afdekm.py  cfcm.py  dbscan.py  dekm.py  fcm.py  fdekm.py  kmeans.py  pfcm.py
fuzzy_clustering/data/: __init__.py  loaders.py  preprocessing.py
fuzzy_clustering/metrics/: __init__.py  fuzzy_metrics.py  sklearn_metrics.py
fuzzy_clustering/models/: __init__.py  autoencoder.py
fuzzy_clustering/utils/: __init__.py  initialization.py  learning.py  performance.py
tools/: fhv.py  pci.py  xbi.py
