[tool.poetry]
name = "fcm"
version = "0.1.0"
description = ""
authors = ["Than Thien <thien2632003@gmail.com>"]
readme = "README.md"
packages = [{include = "fcm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-fuzzy = "^0.4.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
