[tool.poetry]
name = "kmean"
version = "0.1.0"
description = ""
authors = ["Than Thien <thien2632003@gmail.com>"]
readme = "README.md"
packages = [{include = "kmean", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
